--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "bp-create",
-  "packageManager": "yarn@4.9.1",
-  "version": "1.0.0",
-  "type": "module",
-  "bin": {
-    "create-binki": "./index.mts"
-  },
-  "dependencies": {
-    "degit": "^2.8.4",
-    "execa": "^9.6.0",
-    "prompts": "^2.4.2"
-  },
-  "devDependencies": {
-    "@types/degit": "^2.8.6",
-    "@types/node": "^24.8.0",
-    "@types/prompts": "^2.4.9",
-    "typescript": "^5.9.3"
-  }
+    "name": "create-bp",
+    "description": "CLI tool to scaffold frontend, backend, or monorepo projects from binki-templates",
+    "version": "1.0.0",
+    "private": true,
+    "type": "module",
+    "author": "hainkiwanki",
+    "license": "MIT",
+    "bin": {
+        "create-bp": "./index.mts"
+    },
+    "dependencies": {
+        "degit": "^2.8.4",
+        "dotenv": "^17.2.3",
+        "execa": "^9.6.0",
+        "prompts": "^2.4.2"
+    },
+    "devDependencies": {
+        "@types/degit": "^2.8.6",
+        "@types/node": "^24.8.0",
+        "@types/prompts": "^2.4.9",
+        "typescript": "^5.9.3"
+    }
 }
