--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "degit": "^2.8.4",
         "dotenv": "^17.2.3",
         "execa": "^9.6.0",
-        "prompts": "^2.4.2"
+        "prompts": "^2.4.2",
+        "rimraf": "^6.0.1"
     },
     "devDependencies": {
         "@types/degit": "^2.8.6",
